# MakeReadme

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  license
assets/: blueprint.md
src/: content_parser.rs  file_operations.rs  info_schema.rs  lib.rs  main.rs  repodata.rs
