[package]
name = "makereadme"
version = "0.1.0"
edition = "2021"
description = "A simple CLI made to create a README.md for your repository"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.29"
human-panic = "1.0.3"
inquire = "0.5.2"
anyhow = "1.0.66"
toml = "0.5.10"

[dev-dependencies]
assert_cmd = "2.0.7"
