[package]
name = "makereadme"
version = "0.3.0"
edition = "2021"
authors = ["Caio Bernardo caio.2004vb@gmail.com"]
license = "MIT"
description = "A simple CLI made to create a README.md for your repository"
readme = "README.md"
homepage = "https://github.com/caio-bernardo/MakeReadme"
repository = "https://github.com/caio-bernardo/MakeReadme"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
handlebars = { version = "4.3.6", features = ["rust-embed"] }
inquire = "0.6.1"
rust-embed = "6.6.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
